test/Fail/Issue6651-UnivSort-IUniv.err
Issue6651-UnivSort-IUniv.agda:15.5-6: error: [UnequalTypes]
The types
  univSort _8
and
  IUniv
are not equal
when checking that the solution _8 of metavariable _6 has the
expected type IUniv
